--- a/models/pom.xml
+++ b/models/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.aidanns.streams.project</groupId>
-  <artifactId>models</artifactId>
+  <artifactId>cdr-models</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
