--- a/streamapp/pom.xml
+++ b/streamapp/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.aidanns.streams.project</groupId>
-	<artifactId>streamapp</artifactId>
+	<artifactId>cdr-streamapp</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
