Hooked the Storm stream processing app up to the REST API.

--- a/streamapp/conf/log4j.properties
+++ b/streamapp/conf/log4j.properties
@@ -9,3 +9,6 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1
 
 # Print only WARN and above for storm internal
 log4j.logger.backtype.storm=WARN
+
+# Print DEBUG and above for the project code.
+log4j.logger.com.aidanns.streams.project=DEBUG
