--- a/streamapp/pom.xml
+++ b/streamapp/pom.xml
@@ -8,6 +8,34 @@
 	<packaging>jar</packaging>
 
 	<name>streamapp</name>
+	
+	<build>
+	
+		<resources>
+			<resource>
+				<directory>${basedir}/conf</directory>
+			</resource>
+		</resources>
+		<pluginManagement>
+	      <plugins>
+	        <plugin>
+	            <groupId>org.apache.maven.plugins</groupId>
+	            <artifactId>maven-compiler-plugin</artifactId>
+	            <version>3.0</version>
+	        </plugin>
+	      </plugins>  
+	    </pluginManagement>
+	
+	    <plugins>
+	      <plugin>
+	          <artifactId>maven-compiler-plugin</artifactId>
+	          <configuration>
+	              <source>1.7</source>
+	              <target>1.7</target>
+	          </configuration>
+	      </plugin>
+	    </plugins>
+    </build>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -40,14 +68,17 @@
 			<!-- keep storm out of the jar-with-dependencies -->
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.aidanns.streams.project</groupId>
+			<artifactId>cdr-models</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+            
 	</dependencies>
-
-	<build>
-		<resources>
-			<resource>
-				<directory>${basedir}/conf</directory>
-			</resource>
-		</resources>
-	</build>
 
 </project>
