Implemented the spout for the Call Data Records in Storm.

--- a/models/pom.xml
+++ b/models/pom.xml
@@ -10,8 +10,8 @@
   <name>models</name>
   
   <build>
-  	<sourceDirectory>src/main</sourceDirectory>
-  	<testSourceDirectory>src/test</testSourceDirectory>
+  	<sourceDirectory>src/main/java</sourceDirectory>
+  	<testSourceDirectory>src/test/java</testSourceDirectory>
 
     <pluginManagement>
       <plugins>
